--- a/kk-gs-a/pom.xml
+++ b/kk-gs-a/pom.xml
@@ -3,5 +3,23 @@
   <groupId>cn.game.lx</groupId>
   <artifactId>kk-gs-a</artifactId>
   <version>1.0</version>
-  <build/>
+  
+  <packaging>jar</packaging>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+   <dependencies>
+    
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+   
+   
+   </dependencies>
+   
 </project>
