--- a/kk-ls-a/pom.xml
+++ b/kk-ls-a/pom.xml
@@ -1,7 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <groupId>cn.game.lx</groupId>
   <artifactId>kk-ls-a</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build/>
+  <version>1.0</version>
+  
+  <packaging>jar</packaging>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+  <dependencies>
+    
+    <dependency>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+      	<version>3.8.1</version>
+      	<scope>test</scope>
+    </dependency>
+    
+    <dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.16</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>io.netty</groupId>
+		<artifactId>netty-all</artifactId>
+		<version>4.0.28.Final</version>
+	</dependency>
+   
+    <dependency>
+   		<groupId>cn.x.deng</groupId>
+  		<artifactId>javaplus-x-utils</artifactId>
+  		<version>1.0</version>
+    </dependency>
+   
+   	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.35</version>
+	</dependency>
+
+  </dependencies>
+    
 </project>
