--- a/kk-gs-a/pom.xml
+++ b/kk-gs-a/pom.xml
@@ -12,12 +12,29 @@
   
    <dependencies>
     
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	 	<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.28.Final</version>
+		</dependency>
+	   
+	    <dependency>
+	   		<groupId>cn.x</groupId>
+	  		<artifactId>javaplus-x-utils</artifactId>
+	  		<version>1.0</version>
+	    </dependency>
+	   
+	   	<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.35</version>
+		</dependency>
    
    
    </dependencies>
