--- a/kk-gs-a/pom.xml
+++ b/kk-gs-a/pom.xml
@@ -35,7 +35,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.35</version>
 		</dependency>
-   
+		
+	   	<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+			<version>2.0.6</version>
+		</dependency>
    
    </dependencies>
    
