--- a/kk-ls-a/.settings/org.eclipse.core.resources.prefs
+++ b/kk-ls-a/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//resources/db.properties=ISO-8859-1
 encoding//src/main/java/cn/xgame/a/Launch.java=UTF-8
 encoding/<project>=UTF-8
