--- a/kk-gs-a/resources/db.properties
+++ b/kk-gs-a/resources/db.properties
@@ -1,8 +1,5 @@
 
-url:jdbc:mysql://127.0.0.1:3306/
-#url:jdbc:mysql://120.24.101.77:3306/game
-#url:jdbc:mysql://208.43.66.179:3306/game
-#url:jdbc:mysql://115.28.133.209:3306/game
+url:jdbc:mysql://192.168.1.144:3306
 driverClassName:com.mysql.jdbc.Driver
 username:root
 password:longxun
