--- a/kk-gs-a/pom.xml
+++ b/kk-gs-a/pom.xml
@@ -42,6 +42,14 @@
 			<version>2.0.6</version>
 		</dependency>
    
+	   	<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.1</version>
+			<classifier>jdk15</classifier>
+			<scope>compile</scope>
+		</dependency>
+		
    </dependencies>
    
 </project>
