--- a/kk-ls-a/pom.xml
+++ b/kk-ls-a/pom.xml
@@ -40,7 +40,15 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.35</version>
 	</dependency>
-
+	
+	<dependency>
+		<groupId>net.sf.json-lib</groupId>
+		<artifactId>json-lib</artifactId>
+		<version>2.1</version>
+		<classifier>jdk15</classifier>
+		<scope>compile</scope>
+	</dependency>
+	
   </dependencies>
     
        
